[workspace]
members = [
  "ribus",
  "gokien",
]

[workspace.package]
authors = ["Lzu Tao"]
edition = "2021"
license = "GPLv3"

[workspace.dependencies]
glib-sys = "0.19.0"
gobject-sys = "0.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.ribus]
version = "0.1"
path = "ribus"

[package]
name = "ibus-gokien"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ibus-engine-gokien"
path = "src/main.rs"

[profile.dev.package.ibus-gokien]
# turn off debug-assertions
#debug-assertions = false

[dependencies]
glib-sys.workspace = true
gobject-sys.workspace = true
tracing.workspace = true
ribus.workspace = true
tracing-subscriber.workspace = true
once_cell = "1.19.0"
argh = "0.1.12"

[dependencies.gokien]
version = "0.1"
path = "gokien"
