[workspace]
members = [
  "ribus",
  "gokien",
  "ibus-gokien",
  "vncharset",
]
resolver = "2"

[workspace.package]
authors = ["Lzu Tao"]
edition = "2021"
license = "GPLv3"

[workspace.dependencies]
gobject-sys = "0.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.ribus]
version = "0.1"
path = "ribus"

[workspace.dependencies.vi]
version = "0.7"
path = "../vi-rs"

[workspace.lints.clippy]
match_like_matches_macro = "allow"
new_without_default = "allow"
not_unsafe_ptr_arg_deref = "allow"
option_map_unit_fn = "allow"

[profile.dev.package.ibus-gokien]
# turn off debug-assertions
#debug-assertions = false
