[package]
name = "gokien"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ribus.workspace = true
tracing.workspace = true

[dependencies.vi]
version = "0.5.1"
# path = "../../vi-rs"

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
