[package]
name = "gokien"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ribus.workspace = true
tracing.workspace = true
vi.workspace = true
phf = { version = "0.11" }

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
