[package]
name = "ibus-gokien"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ibus-engine-gokien"
path = "src/main.rs"

[dependencies]
argh = "0.1.12"
gobject-sys.workspace = true
ribus.workspace = true
tracing-journald = "0.3.0"
tracing-subscriber.workspace = true
tracing.workspace = true

[dependencies.gokien]
version = "0.1"
path = "../gokien"

[features]
surrounding_text = []

[lints]
workspace = true
